Define the webpage's structure

--- a/index.html
+++ b/index.html
@@ -4,5 +4,104 @@
     <meta charset="UTF-8" />
     <title>Admin Dashboard</title>
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div>
+        <label for="search-bar"></label>
+        <input id="search-bar" name="search_bar" type="text" />
+        <button type="button"></button>
+        <div class="profile-image"></div>
+        <div>Morgan Oakley</div>
+      </div>
+      <div>
+        <div class="profile-image"></div>
+        <div><span>Hi there,</span>Morgan Oakley (@morgan)</div>
+        <button type="button">New</button>
+        <button type="button">Upload</button>
+        <button type="button">Share</button>
+      </div>
+    </header>
+    <div class="sidebar">
+      <div>Dashboard</div>
+      <nav>
+        <ul>
+          <li>Home</li>
+          <li>Profile</li>
+          <li>Messages</li>
+          <li>History</li>
+          <li>Tasks</li>
+          <li>Communities</li>
+        </ul>
+        <ul>
+          <li>Settings</li>
+          <li>Support</li>
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </div>
+    <main>
+      <div class="projects">
+        <article>
+          <header>Super Cool Project</header>
+          <p>Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh erat, id facilisis felis accumsan nec.</p>
+        </article>
+        <article>
+          <header>Less Cool Project</header>
+          <p>Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque sed dolor tncidunt, consectetur sapien et, facilisis dolor. Duis sem purus, dignissim ut sapien in, varius pellentesque lacus.</p>
+        </article>
+        <article>
+          <header>Impossible App</header>
+          <p>In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a placerat velit sagittis id.</p>
+        </article>
+        <article>
+          <header>Easy Peasy App</header>
+          <p>Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim urna eget accumsan aliquam. Curabitur dignissim nisi in tortor commodo, ac bibendum magna tincidunt.</p>
+        </article>
+        <article>
+          <header>Ad Blocker</header>
+          <p>Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel, pharetra hendrerit felis. Aliquam sed malesuada eros.</p>
+        </article>
+        <article>
+          <header>Money Maker</header>
+          <p>Praesent convallis, libero quis congue elementum, nunc ante faucibus sapien, ac scelerisque tortor purus sit amet ex pelientesque mollis nec sem vel aliquam.</p>
+        </article>
+      </div>
+      <div class="announcements">
+        <article>
+          <header>Site Maintenance</header>
+          <p>Vestibulum condimentum telius lacus, in accumsan elit maximus ac. Donec hendreit sodales congue...</p>
+        </article>
+        <article>
+          <header>Community Share Day</header>
+          <p>Nam vel lectus tincidunt, rutrum nulla eu, omare libero. Aliquam dictum accumsan porttitor...</p>
+        </article>
+        <article>
+          <header>Updated Privacy Policy</header>
+          <p>Phasellus efficitur nisi eget elit consecteur, eget condimentum ante auctor. Cras fringilla sagittis sem in mattis...</p>
+        </article>
+      </div>
+      <div class="trending">
+        <div>
+          <div class="profile-image"></div>
+          <div class="profile-at">tegan</div>
+          <div>World Peace Builder</div>
+        </div>
+        <div>
+          <div class="profile-image"></div>
+          <div class="profile-at">morgan</div>
+          <div>Super Cool Project</div>
+        </div>
+        <div>
+          <div class="profile-image"></div>
+          <div class="profile-at">kendall</div>
+          <div>Life Changing App</div>
+        </div>
+        <div>
+          <div class="profile-image"></div>
+          <div class="profile-at">alex</div>
+          <div>No Traffic Maker</div>
+        </div>
+      </div>
+    </main>
+  </body>
 </html>
