--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Admin Dashboard</title>
+    <link href="styles.css" rel="stylesheet"/>
   </head>
   <body>
     <header>
