--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   </head>
   <body>
     <header>
-      <div>
+      <div class="search">
         <label for="search-bar"></label>
-        <input id="search-bar" name="search_bar" type="text" />
+        <input class="search-bar" id="search-bar" name="search_bar" type="text" />
         <button type="button"></button>
         <div class="profile-image"></div>
         <div>Morgan Oakley</div>
       </div>
-      <div>
+      <div class="account-actions">
         <div class="profile-image"></div>
         <div><span>Hi there,</span>Morgan Oakley (@morgan)</div>
         <button type="button">New</button>
