Centre .account-actions items

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </div>
       <div class="account-actions">
         <div class="profile-image"></div>
-        <div><span>Hi there,</span>Morgan Oakley (@morgan)</div>
+        <div class="greeting"><span>Hi there,</span>Morgan Oakley (@morgan)</div>
         <button type="button">New</button>
         <button type="button">Upload</button>
         <button type="button">Share</button>
