--- a/index.html
+++ b/index.html
@@ -134,49 +134,109 @@
         <div class="label">Your Projects</div>
         <div class="projects">
           <article>
-            <header>Super Cool Project</header>
-            <p>
-              Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin nibh
-              erat, id facilisis felis accumsan nec.
-            </p>
+            <div class="project-text">
+              <header>Super Cool Project</header>
+              <p>
+                Sed tempus ut lacus ut scelerisque. Suspendisse sollicitudin
+                nibh erat, id facilisis felis accumsan nec.
+              </p>
+            </div>
+            <div class="project-buttons">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>star-plus-outline</title>
+                <path
+                  d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z"
+                />
+              </svg>
+            </div>
           </article>
           <article>
-            <header>Less Cool Project</header>
-            <p>
-              Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque
-              sed dolor tncidunt, consectetur sapien et, facilisis dolor. Duis
-              sem purus, dignissim ut sapien in, varius pellentesque lacus.
-            </p>
+            <div class="project-text">
+              <header>Less Cool Project</header>
+              <p>
+                Nullam condimentum ipsum ut lectus vehicula consectetur. Quisque
+                sed dolor tncidunt, consectetur sapien et, facilisis dolor. Duis
+                sem purus, dignissim ut sapien in, varius pellentesque lacus.
+              </p>
+            </div>
+            <div class="project-buttons">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>star-plus-outline</title>
+                <path
+                  d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z"
+                />
+              </svg>
+            </div>
           </article>
           <article>
-            <header>Impossible App</header>
-            <p>
-              In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
-              placerat velit sagittis id.
-            </p>
+            <div class="project-text">
+              <header>Impossible App</header>
+              <p>
+                In hac habitasse platea dictumst. Vivamus dictum rutrum arcu, a
+                placerat velit sagittis id.
+              </p>
+            </div>
+            <div class="project-buttons">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>star-plus-outline</title>
+                <path
+                  d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z"
+                />
+              </svg>
+            </div>
           </article>
           <article>
-            <header>Easy Peasy App</header>
-            <p>
-              Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim
-              urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
-              commodo, ac bibendum magna tincidunt.
-            </p>
+            <div class="project-text">
+              <header>Easy Peasy App</header>
+              <p>
+                Etiam cursus eros ac efficitur fringilla. Vestibulum dignissim
+                urna eget accumsan aliquam. Curabitur dignissim nisi in tortor
+                commodo, ac bibendum magna tincidunt.
+              </p>
+            </div>
+            <div class="project-buttons">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>star-plus-outline</title>
+                <path
+                  d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z"
+                />
+              </svg>
+            </div>
           </article>
           <article>
-            <header>Ad Blocker</header>
-            <p>
-              Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus vel,
-              pharetra hendrerit felis. Aliquam sed malesuada eros.
-            </p>
+            <div class="project-text">
+              <header>Ad Blocker</header>
+              <p>
+                Quisque eget rutrum nisl. Nam augue justo, cursus vitae metus
+                vel, pharetra hendrerit felis. Aliquam sed malesuada eros.
+              </p>
+            </div>
+            <div class="project-buttons">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>star-plus-outline</title>
+                <path
+                  d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z"
+                />
+              </svg>
+            </div>
           </article>
           <article>
-            <header>Money Maker</header>
-            <p>
-              Praesent convallis, libero quis congue elementum, nunc ante
-              faucibus sapien, ac scelerisque tortor purus sit amet ex
-              pelientesque mollis nec sem vel aliquam.
-            </p>
+            <div class="project-text">
+              <header>Money Maker</header>
+              <p>
+                Praesent convallis, libero quis congue elementum, nunc ante
+                faucibus sapien, ac scelerisque tortor purus sit amet ex
+                pelientesque mollis nec sem vel aliquam.
+              </p>
+            </div>
+            <div class="project-buttons">
+              <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                <title>star-plus-outline</title>
+                <path
+                  d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z"
+                />
+              </svg>
+            </div>
           </article>
         </div>
       </div>
